panel install now set to true

--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,11 @@
     "type": "project",
     "keywords": ["kirby", "cms", "starterkit"],
     "homepage": "https://getkirby.com",
-    "authors": [
-        {
-            "name": "Bastian Allgeier",
-            "email": "bastian@getkirby.com",
-            "homepage": "https://getkirby.com"
-        }
-    ],
+    "authors": [{
+        "name": "Bastian Allgeier",
+        "email": "bastian@getkirby.com",
+        "homepage": "https://getkirby.com"
+    }],
     "support": {
         "email": "support@getkirby.com",
         "issues": "https://github.com/getkirby/starterkit/issues",
@@ -19,7 +17,8 @@
     },
     "require": {
         "php": ">=7.1.0",
-        "getkirby/cms": "^3.0"
+        "getkirby/cms": "^3.0",
+        "sendgrid/sendgrid": "~5.0.9"
     },
     "config": {
         "optimize-autoloader": true
