--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -1,3 +1,17 @@
 title: Site
-preset: pages
 unlisted: false
+
+fields:
+  ContactFormEmail:
+    label: Contact Form To Email
+    type: text
+  GoogleAnalyticsAPI:
+    label: Google Analytics API for Entire Site
+    type: text
+  FacebookPixelAPI:
+    label: Facebook Pixel API for Entire Site
+    type: text
+  pages:
+    headline: Pages
+    status: published
+
