testing facebook pixel code

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     },
     "require": {
         "php": ">=7.1.0",
-        "getkirby/cms": "^3.0",
-        "sendgrid/sendgrid": "~5.0.9"
+        "getkirby/cms": "^3.0"
     },
     "config": {
         "optimize-autoloader": true
